; ModuleID = '/home/carl/AnghaBench/linux/net/bluetooth/rfcomm/extr_core.c___rfcomm_dlc_disconn.c'
source_filename = "/home/carl/AnghaBench/linux/net/bluetooth/rfcomm/extr_core.c___rfcomm_dlc_disconn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rfcomm_dlc = type { i32, i32, i32, %struct.rfcomm_session* }
%struct.rfcomm_session = type { i32 }

@BT_DISCONN = common dso_local global i32 0, align 4
@RFCOMM_DISC_TIMEOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rfcomm_dlc*)* @__rfcomm_dlc_disconn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__rfcomm_dlc_disconn(%struct.rfcomm_dlc* %0) #0 {
  %2 = alloca %struct.rfcomm_dlc*, align 8
  %3 = alloca %struct.rfcomm_session*, align 8
  store %struct.rfcomm_dlc* %0, %struct.rfcomm_dlc** %2, align 8
  %4 = load %struct.rfcomm_dlc*, %struct.rfcomm_dlc** %2, align 8
  %5 = getelementptr inbounds %struct.rfcomm_dlc, %struct.rfcomm_dlc* %4, i32 0, i32 3
  %6 = load %struct.rfcomm_session*, %struct.rfcomm_session** %5, align 8
  store %struct.rfcomm_session* %6, %struct.rfcomm_session** %3, align 8
  %7 = load i32, i32* @BT_DISCONN, align 4
  %8 = load %struct.rfcomm_dlc*, %struct.rfcomm_dlc** %2, align 8
  %9 = getelementptr inbounds %struct.rfcomm_dlc, %struct.rfcomm_dlc* %8, i32 0, i32 2
  store i32 %7, i32* %9, align 8
  %10 = load %struct.rfcomm_dlc*, %struct.rfcomm_dlc** %2, align 8
  %11 = getelementptr inbounds %struct.rfcomm_dlc, %struct.rfcomm_dlc* %10, i32 0, i32 1
  %12 = call i64 @skb_queue_empty(i32* %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %23

14:                                               ; preds = %1
  %15 = load %struct.rfcomm_session*, %struct.rfcomm_session** %3, align 8
  %16 = load %struct.rfcomm_dlc*, %struct.rfcomm_dlc** %2, align 8
  %17 = getelementptr inbounds %struct.rfcomm_dlc, %struct.rfcomm_dlc* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = call i32 @rfcomm_send_disc(%struct.rfcomm_session* %15, i32 %18)
  %20 = load %struct.rfcomm_dlc*, %struct.rfcomm_dlc** %2, align 8
  %21 = load i32, i32* @RFCOMM_DISC_TIMEOUT, align 4
  %22 = call i32 @rfcomm_dlc_set_timer(%struct.rfcomm_dlc* %20, i32 %21)
  br label %30

23:                                               ; preds = %1
  %24 = load %struct.rfcomm_dlc*, %struct.rfcomm_dlc** %2, align 8
  %25 = call i32 @rfcomm_queue_disc(%struct.rfcomm_dlc* %24)
  %26 = load %struct.rfcomm_dlc*, %struct.rfcomm_dlc** %2, align 8
  %27 = load i32, i32* @RFCOMM_DISC_TIMEOUT, align 4
  %28 = mul nsw i32 %27, 2
  %29 = call i32 @rfcomm_dlc_set_timer(%struct.rfcomm_dlc* %26, i32 %28)
  br label %30

30:                                               ; preds = %23, %14
  ret void
}

declare dso_local i64 @skb_queue_empty(i32*) #1

declare dso_local i32 @rfcomm_send_disc(%struct.rfcomm_session*, i32) #1

declare dso_local i32 @rfcomm_dlc_set_timer(%struct.rfcomm_dlc*, i32) #1

declare dso_local i32 @rfcomm_queue_disc(%struct.rfcomm_dlc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
